Spacing fixed

--- a/css/work.css
+++ b/css/work.css
@@ -53,7 +53,6 @@ iframe {
 }
 
 .card-space-container { 
-  margin-top: 2rem;
   padding: 5rem 0 5rem;
   position: relative;
 }
